--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Test
+name: List Environment Variables
 on:
   workflow_dispatch:
  ## push:
@@ -7,7 +7,7 @@ on:
  #   branches: [ main ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - run : env
+    ubuntu-environment-variables:
+       runs-on: ubuntu-latest
+       steps:
+        - run : env
